- added securesocial to the mix.

--- a/web/app/views/main.scala.html
+++ b/web/app/views/main.scala.html
@@ -19,10 +19,10 @@
         <!-- script src="assets/lib/react/react.min.js"></script -->
         <script src="assets/lib/react/react.js"></script>
 
-        <script src="assets/javascripts/sbt-settingkey-anon-4-55e2e32c-client-fastopt.js"></script>
+        <script src="assets/javascripts/surfkit-client-fastopt.js"></script>
 
         <script type="text/javascript">
-            im.surfkit.client.HelloReact().main()
+            io.surfkit.client.HelloReact().main()
         </script>
     </body>
 </html>
