--- a/web/app/assets/stylesheets/less/custom-styles.less
+++ b/web/app/assets/stylesheets/less/custom-styles.less
@@ -1,2 +1,2 @@
-@brand-primary:         #123f64;
-@body-bg:               blue;
+//@brand-primary:         #123f64;
+//@body-bg:               blue;
