syncing before doing some max work

--- a/web/app/views/main.scala.html
+++ b/web/app/views/main.scala.html
@@ -2,11 +2,12 @@
 
 <html>
     <head>
-        <title>Just Play Scala</title>
+        <title>SurfKit.io</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/stylesheets/less/__main.css" >
     </head>
     <body>
-        <h1>Just Play Scala</h1>
+        <h1>SurfKit.io</h1>
 
         <button type="button" class="btn btn-default" aria-label="Left Align">
             <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
@@ -18,6 +19,7 @@
         <script src="assets/lib/bootstrap/js/bootstrap.min.js"></script>
         <!-- script src="assets/lib/react/react.min.js"></script -->
         <script src="assets/lib/react/react.js"></script>
+        <script src="assets/javascripts/flux.js"></script>
 
         <script src="assets/javascripts/surfkit-client-fastopt.js"></script>
 
