took out flux ref

--- a/web/app/views/main.scala.html
+++ b/web/app/views/main.scala.html
@@ -9,6 +9,7 @@
     <body>
         <h1>SurfKit.io</h1>
 
+        test
         <button type="button" class="btn btn-default" aria-label="Left Align">
             <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
         </button>
