improved friend adder

--- a/web/app/assets/stylesheets/less/__main.less
+++ b/web/app/assets/stylesheets/less/__main.less
@@ -22,6 +22,8 @@ html{
               padding: 5px 10px;
               color: @input-color;
               text-overflow: ellipsis;
+              white-space: nowrap;
+              overflow: hidden;
             }
             >i{
               color: @input-color;
