better add friend events

--- a/web/app/assets/stylesheets/less/__main.less
+++ b/web/app/assets/stylesheets/less/__main.less
@@ -62,6 +62,12 @@ html{
             height: 250px;
             overflow-x: hidden;
             overflow-wrap: break-word;
+            .loading{
+              text-align: center;
+              i{
+                padding:5px;
+              }
+            }
             .entry{
               display:flex;
               :last-child{
